<b><u> v2.22, 26.10.2016</b></u>
<font color=#FF8C00>&#9830;</font> Fix a nil error in locPanel if entering an instance.

<b><u> v2.21, 25.10.2016</b></u>
<font color=#FF8C00>&#9830;</font> FOR PATCH 7.1
<font color=#FF8C00>&#9830;</font> Add back GroupInfo Frame. It's now movable via mover if you are in a Raid/Group.
<font color=#FF8C00>&#9830;</font> Remove settings from ElvUI that are no longer exist.

<b><u> v2.20, 21.10.2016</b></u>
<font color=#FF8C00>&#9830;</font> Massive Code cleanup.
<font color=#FF8C00>&#9830;</font> Change the tag for BigName in Player-/TargetFrame.
<font color=#FF8C00>&#9830;</font> Let the Bossmods handle the RaidWarnigFrame.
<font color=#FF8C00>&#9830;</font> Delete GroupInfo.
<font color=#FF8C00>&#9830;</font> Some Layout adjustments.
<font color=#FF8C00>&#9830;</font> Added a Vignette-Alert (For Rars/Treasures).
<font color=#FF8C00>&#9830;</font> Updated LocPanel and fix a error in Dropdown.
<font color=#FF8C00>&#9830;</font> Change the ClassIcon texture for the TargetFrame.
<font color=#FF8C00>&#9830;</font> Adopted latest oUF changes from ElvUI.
<font color=#FF8C00>&#9830;</font> Add an own BigWigs Skin.
<font color=#FF8C00>&#9830;</font> Delte the MasterPlan Skin.
<font color=#FF8C00>&#9830;</font> Cleanup for BossEmotes.

<b><u> v2.19, 24.09.2016</b></u>
<font color=#FF8C00>&#9830;</font> Add pins to the worldmap. (Shift+ Left-click to add a pin)
<font color=#FF8C00>&#9830;</font> Adjust position of BossEmotes.
<font color=#FF8C00>&#9830;</font> Add a GroupInfo frame. Wich shows additional info's about the raid.
<font color=#FF8C00>&#9830;</font> Remove the skin for the ObjectiveTracker. Had too much trouble with it.
<font color=#FF8C00>&#9830;</font> Massive overhaul of the DPS Layout.

<b><u> v2.18, 15.09.2016</b></u>
<font color=#FF8C00>&#9830;</font> Completly rewrite and overhaul the ObjectiveTracker Skin. (Still WIP)
<font color=#FF8C00>&#9830;</font> Add a bossEmote frame. (WIP)