@@ -1,3 +1,8 @@
+** v2.23, 02.11.2016**
+* Fix a taint in WorldMap #40
+* Update BigWigs Skin. Now based on HalfBar Skin from AddOnSkins. Credits Azilroka
+* Let BenikUI handle the fonts.
+
 ** v2.22, 26.10.2016**
 * Fix a nil error in locPanel if entering an instance.
 
