@@ -1,3 +1,8 @@
+<b><u> v2.23, 02.11.2016</b></u>
+<font color=#FF8C00>&#9830;</font> Fix a taint in WorldMap #40
+<font color=#FF8C00>&#9830;</font> Update BigWigs Skin. Now based on HalfBar Skin from AddOnSkins. Credits Azilroka
+<font color=#FF8C00>&#9830;</font> Let BenikUI handle the fonts.
+
 <b><u> v2.22, 26.10.2016</b></u>
 <font color=#FF8C00>&#9830;</font> Fix a nil error in locPanel if entering an instance.
 
